# serverless-csv-pipeline

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  terraform.yml
docs/: ARCHITECTURE.md  DECISIONS.md
infrastructure/: main.tf  outputs.tf  variables.tf  versions.tf
src/csv_pipeline/: cli.py  init.py  models.py  processor.py  readers.py
tests/: test_processor_basic.py
