[project]
name = "serverless-csv-pipeline"
version = "0.1.0"
description = "Serverless CSV processing pipeline (S3 → Lambda → SQS) with deterministic aggregation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
 "pytest>=8.0.0",
 "ruff>=0.6.0",
 "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
